--- a/palabrejo/detalle.html
+++ b/palabrejo/detalle.html
@@ -7,18 +7,20 @@
     <!-- Nombre de la página  -->
     <title>palabrejo</title>
     <script src="script/localstoragelist.js"></script>
-    <script src="script/home.js"></script>
+    <script src="script/urlparams.js"></script>
+
+    <script src="script/detalle.js"></script>
 </head>
 <body>
-    <p class="texto1"> Bienvenido a </p>
-    <p class="h2"> #PalabrejoProject</p>
+    <p class="texto1" id="palabra"> Bienvenido a </p>
+    <p class="h2" id="CA"> #PalabrejoProject</p>
 
 <div id="mapa"> </div>
-<p class="h1"> Palabrejo project</p>
+<p class="h1"></p>
 
 <div id="mi-palabra" class="bloque_palabra"></div>
 
-<a href="favs.html">VER FAVORITOS</a>
+<ol id="definiciones"></ol>
 
 <!-- <p class="nombre">${datos.nombre}</p> -->
 </body>
