--- a/palabrejo/favs.html
+++ b/palabrejo/favs.html
@@ -7,7 +7,7 @@
     <!-- Nombre de la página  -->
     <title>palabrejo</title>
     <script src="script/localstoragelist.js"></script>
-    <script src="script/home.js"></script>
+    <script src="script/favs.js"></script>
 </head>
 <body>
     <p class="texto1"> Bienvenido a </p>
@@ -17,8 +17,6 @@
 <p class="h1"> Palabrejo project</p>
 
 <div id="mi-palabra" class="bloque_palabra"></div>
-
-<a href="favs.html">VER FAVORITOS</a>
 
 <!-- <p class="nombre">${datos.nombre}</p> -->
 </body>
