--- a/palabrejo/index.html
+++ b/palabrejo/index.html
@@ -10,7 +10,7 @@
     <script src="script/home.js"></script>
 </head>
 <body>
-    <p class="texto1"> Bienvenido a </p>
+    <h1 class="texto1"> Bienvenido a </h1>
     <p class="h2"> #PalabrejoProject</p>
 
 <div id="mapa"> </div>
