--- a/palabrejo/detalle.html
+++ b/palabrejo/detalle.html
@@ -14,7 +14,6 @@
 </head>
 <body>
     <p class="texto1" id="palabra"> Bienvenido a </p>
-    <p class="h2" id="CA"> #PalabrejoProject</p>
 
 <div id="mapa"> </div>
 <p class="h1"></p>
@@ -27,9 +26,9 @@
     <!-- Los botones -->
     <div class="tabs__buttons">
         <!-- Cada uno de los botones -->
-        <a href="#" class="tabs__tabbutton">UNO</a>
-        <a href="#" class="tabs__tabbutton">DOS</a>
-        <a href="#" class="tabs__tabbutton">TRES</a>
+        <a href="#" class="tabs__tabbutton">Definition</a>
+        <a href="#" class="tabs__tabbutton">Origin</a>
+        <a href="#" class="tabs__tabbutton">Phrases</a>
     </div>
     <!-- El contenido de las tabs -->
     <div>
@@ -40,10 +39,10 @@
             <p>Esta es la tab por defecto</p>
         </div>
         <div class="tabs__tab">
-            <h2>DOS</h2>
+            <ol  id="CA"></ol>
         </div>
         <div class="tabs__tab">
-            <h2>TRES</h2>
+            <ol id="frases"></ol>
         </div>
     </div>
 </div>
