--- a/palabrejo/index.html
+++ b/palabrejo/index.html
@@ -10,14 +10,14 @@
     <script src="script/home.js"></script>
 </head>
 <body>
-    <h1 class="texto1"> Bienvenido a </h1>
+    <h1 class="texto1"> Word list </h1>
     <p class="h2"> #PalabrejoProject</p>
 
 <div id="mapa"> </div>
 <p class="h1"> Palabrejo project</p>
-
+<div>
 <div id="mi-palabra" class="bloque_palabra"></div>
-
+</div>
 <a href="favs.html">VER FAVORITOS</a>
 
 <!-- <p class="nombre">${datos.nombre}</p> -->
