--- a/palabrejo/biblioteca.html
+++ b/palabrejo/biblioteca.html
@@ -18,6 +18,13 @@
             <h1>Todos los palabrejos</h1>
         </header>
         <main>
+            <search>
+        <form action="./seach/">
+            <label for="movie">Buscar una palabra</label>
+            <input type="search" id="s" name="q">
+            <button type="submit">Buscar</button>
+        </form>
+    </search>
             <section id="0">
                 <h2>Palabrejo palabrajeado</h2>
                 <div>
