--- a/palabrejo/biblioteca.html
+++ b/palabrejo/biblioteca.html
@@ -19,7 +19,7 @@
         </header>
         <main>
             <search>
-        <form action="./seach/">
+        <form action="./search/">
             <label for="movie">Buscar una palabra</label>
             <input type="search" id="s" name="q">
             <button type="submit">Buscar</button>
