--- a/palabrejo/index.html
+++ b/palabrejo/index.html
@@ -8,32 +8,16 @@
     <title>palabrejo</title>
     <script src="script/localstoragelist.js"></script>
     <script src="script/home.js"></script>
-
 </head>
 <body>
-    <!-- <search>
-        <form action="./seach/">
-            <label for="movie">Buscar una palabra</label>
-            <input type="search" id="s" name="q">
-            <button type="submit">Buscar</button>
-        </form>
-    </search> -->
-    <search>
-        <form id="search-form">
-            <label for="movie">Buscar una palabra</label>
-            <input type="search" id="s" name="q">
-            <button type="submit">Buscar</button>
-        </form>
-    </search>
-    <div class="text" id="search-results"></div>
-    <h1 class="texto1"> Word list </h1>
+    <p class="texto1"> Bienvenido a </p>
     <p class="h2"> #PalabrejoProject</p>
 
 <div id="mapa"> </div>
 <p class="h1"> Palabrejo project</p>
-<div>
+
 <div id="mi-palabra" class="bloque_palabra"></div>
-</div>
+
 <a href="favs.html">VER FAVORITOS</a>
 
 <!-- <p class="nombre">${datos.nombre}</p> -->
