--- a/palabrejo/word_list.html
+++ b/palabrejo/word_list.html
@@ -27,8 +27,9 @@
     </search>
     <div class="text" id="search-results"></div>
     <h1 class="texto1"> Word list </h1>
-    <p > #PalabrejoProject</p>
+    <p class="h2"> #PalabrejoProject</p>
 
+<div id="mapa"> </div>
 <p class="h1"> Palabrejo project</p>
 <div>
 <div id="mi-palabra" class="bloque_palabra"></div>
