--- a/palabrejo/detalle.html
+++ b/palabrejo/detalle.html
@@ -34,11 +34,12 @@
     <div>
         <!-- Cada una de las tabs -->
         <div class="tabs__tab tabs__tab--visible">
-            <ol id="definiciones"></ol>
-            <p>Esta es la tab por defecto</p>
+            <ol id="definiciones">assa</ol>
         </div>
         <div class="tabs__tab">
             <ol  id="CA"></ol>
+            <ol id="origen">asas</ol>
+
         </div>
         <div class="tabs__tab">
             <ol id="frases"></ol>
