--- a/palabrejo/index.html
+++ b/palabrejo/index.html
@@ -1,25 +1,43 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Nombre de la página  -->
-    <title>palabrejo</title>
-    <script src="script/localstoragelist.js"></script>
-    <script src="script/home.js"></script>
+    <title>#PalabrejoProyect</title>
+    <!-- enlace a hoja de estilos CSS -->
+    <link rel="stylesheet" href="css/estilos.css">
+    <!-- enlace al archivo JavaScript --> 
 </head>
 <body>
-    <p class="texto1"> Bienvenido a </p>
-    <p class="h2"> #PalabrejoProject</p>
-
-<div id="mapa"> </div>
-<p class="h1"> Palabrejo project</p>
-
-<div id="mi-palabra" class="bloque_palabra"></div>
-
-<a href="favs.html">VER FAVORITOS</a>
-
-<!-- <p class="nombre">${datos.nombre}</p> -->
+    <div id="titulo-contenedor">
+        <!-- título de la página -->
+        <br><h2>Bienvenido a</h2> 
+        <br><h1>#PalabrejoProyect</h1>
+    </div>
+    <div id="subtitulo-contenedor">
+        <img src="imagenes/mapa.png">
+        <div id="texto-subtitulo">
+            <p>Palabrejo Project</p>
+        </div>
+    </div>
+    <div class="carrusel">
+        <div class="card">
+            <h3>Acerca de</h3>
+            <p>Este proyecto intenta recuperar y recordar las palabras de la España rural, 
+                que cada vez pierde más terreno frente a las ciudades.</p>
+        </div>
+        <div class="card">
+            <h3>Ibarra Real Nova</h3>
+            <p>En 2007, La Calcografía Nacional Española organizó un proyecto dirigido por 
+                José María Ribagorda con el objetivo de divulgar el valiosísimo patrimonio 
+                tipográfico producido en España en el siglo XVIII a través de la "Imprenta Real".</p>
+        </div>
+        <div class="card">
+            <h3>Situación actual</h3>
+            <p>6 de cada 10 pueblos españoles han perdido población en los últimos veinte años. 
+                Hay más de tres mil pueblos condenados a desaparecer. Esto representa casi la 
+                mitad de todos los pueblos de España.</p>
+        </div>
+        <!-- Agrega más tarjetas según sea necesario -->
+    </div>
+    
 </body>
 </html>
