--- a/palabrejo/index.html
+++ b/palabrejo/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>#PalabrejoProyect</title>
     <!-- enlace a hoja de estilos CSS -->
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/estiloshome.css">
     <!-- enlace al archivo JavaScript --> 
 </head>
 <body>
